--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,17 @@
 /* Header Section */
 header{
-    background-color: black;
-    font-family: Helvetica, Arial, sans-serif;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 20px 35px;
+    padding: 10px;
+    background-color: black;
+    font-family: Helvetica, Arial, sans-serif;
 } 
 
 header h1 {
     color: white;
+    font-weight: normal;
+    text-align: center;
 }
 
 header nav ul li {
@@ -27,8 +29,54 @@ header a {
     text-decoration: none;
 }
 
-
-.hero {
-    background-image: url("./images/Light-Wood-Background-Texture-1.jpg")
+body {
+    color: black;
 }
 
+/* footer section */
+footer {
+    background-color: black;
+    padding-left: 30px;
+    margin: 0 auto;
+}
+
+footer h2 {
+    color: whitesmoke;
+    font-weight: bold;
+    font-size: 50px;
+}
+
+/* Hero Section */
+.hero {
+    background-image: url("./images/Light-Wood-Background-Texture-1.jpg");
+    padding-bottom: 150px;
+}
+
+.hero p {
+    display: flex;
+    justify-content: flex-end;
+}
+
+/* About Me */
+.intro {
+    background-color: white;
+    padding-left: 30px;
+}
+
+.intro h2 {
+    color:black;
+    font-weight: bold;
+    font-size: 50px;
+}
+
+/* My Work section */
+.work {
+    background-color: white;
+    padding-left: 30px;
+}
+
+.work h2 {
+    color:black;
+    font-weight: bold;
+    font-size: 50px;
+}
