--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,8 @@ footer {
 footer h2 {
     color: whitesmoke;
     font-weight: bold;
-    font-size: 100px;
-    padding-left: 30px;
+    font-size: 70px;
+    padding-left: 70px;
     border-right: 3px solid white;
     height: 150px;
     padding-right: 50px;
@@ -65,11 +65,12 @@ footer div address {
     flex-wrap: wrap;
     justify-content: space-between;
     list-style: none;
+    font-size: 30px;
+    align-items: center;
 }
 
 footer div address a {
     padding: 20px;
-    font-size: 20px;
     margin-right: 30px;
     color: whitesmoke;
     text-decoration: none;
@@ -89,14 +90,14 @@ footer div address a {
     background-image: url("./images/Light-Wood-Background-Texture-1.jpg");
     background-size: cover;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     flex-wrap: wrap;
+    padding-bottom: 50px;
 }
 
 .hero p {
     padding-top: 50px;
-    font-size: 50px;
-
+    font-size: 60px;
 }
 
 
@@ -113,17 +114,20 @@ footer div address a {
     color: black;
     font-weight: bold;
     font-size: 100px;
-    padding-left: 30px;
+    padding-left: 70px;
     border-right: 3px solid black;
     height: 150px;
     padding-right: 50px;
+}
+
+.intro p {
+    text-align: center;
 }
 
 
 /* My Work section */
 .work {
     background-color: white;
-    padding-left: 30px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -132,8 +136,28 @@ footer div address a {
     color: black;
     font-weight: bold;
     font-size: 100px;
-    padding-left: 30px;
+    padding-left: 70px;
     border-right: 3px solid black;
     height: 150px;
     padding-right: 50px;
+}
+
+.square1 {
+    height: 200px;
+    width: 500px;
+    background-color: grey;
+    border-right: none;
+}
+
+.titles h2 {
+    font-size: 20px;
+}
+
+.titles p {
+    font-size: 10px;
+}
+
+h3 {
+    text-align: center;
+    font-size: 30px;
 }
